done with navbar

--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+z<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
                     <button
                      class="navbar-toggler"
                      style="height: 6vh;"
-                      type="button"
+                      type="buttone"
                      data-bs-toggle="collapse"
                     data-bs-target="#navmenu"
                     >
