--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./bootstrap.css">
   </head>
   <body>
+
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-danger h-25 navbar-dark">
     <div class="container">
@@ -46,11 +47,97 @@
                 </p>
                 <button type="button" class="btn btn-lg btn-primary">Enroll Now</button>
              </div>
-                 <video class="img-fluid w-50 mb-5 mx-5 my-5" src="./assets/Things to know.mp4" 
+                 <video class="img-fluid d-none d-sm-block mb-5 mx-5 my-5 " src="./assets/Things to know.mp4" 
                  alt="video about things to know" ></video>
         </div>
     </div>
 </section>
+
+<!-- newsletter -->
+
+    <section class="bg-primary text-light p-5 ">
+        <div class="container d-md-flex">
+            <div class="d-md-flex justify-content-between align-items-center">
+                <h3 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h3>
+            </div>
+            <div class="input-group mb-3 news-input">
+                <input type="text" class="form-control" 
+                placeholder="Enter Username">
+                <button class="btn btn-outline-secondary bg-secondary text-light">Sign Up</button>
+            </div>
+        </div>
+    </section>
+
+<!-- Boxes -->
+
+<section class="p-5">
+    <div class="container">
+        <div class="row text-center g-4">
+            <div class="col-md ">
+                <div class="card bg-dark text-white">
+                    <div class="card-body text-center">
+                        <div class="h1 mb-3">
+                            <i class="bi bi-laptop bg-danger"></i>
+                        </div>
+                        <h3 class="card-title mb-3">Virtual</h3>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                             Sint maxime eum eius quae vitae, voluptate porro dolorum 
+                             culpa nam reprehenderit ducimus deserunt exercitationem 
+                            sapiente deleniti sequi eligendi, modi, alias velit!
+                        </p>
+                        <a class="btn btn-primary table-hover">Read More!</a>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-md ">
+                <div class="card bg-dark text-white">
+                    <div class="card-body text-center">
+                        <div class="h1 mb-3">
+                            <i class="bi bi-user"></i>
+                        </div>
+                        <h3 class="card-title mb-3">Hybrid</h3>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Soluta iste perspiciatis in labore 
+                            quibusdam itaque quis exercitationem repellat natus 
+                            fugiat magnam provident assumenda cum totam, quasi,
+                             ipsum repudiandae aliquam nemo.</p>
+                             <a class="btn btn-primary table-hover">Read More!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md ">
+                <div class="card bg-dark text-white">
+                    <div class="card-body text-center">
+                        <div class="h1 mb-3">
+                            <i class="bi bi-users"></i>
+                        </div>
+                        <h3 class="card-title mb-3">In Person</h3>
+                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur
+                             adipisicing elit. Fugiat corrupti repellat, vitae,
+                              inventore alias at, cum dicta quis quos suscipit
+                               numquam. Cum corporis rerum quisquam voluptatem
+                                voluptatibus labore culpa ratione!</p>
+                             <a class="btn btn-primary table-hover">Read More!</a>
+
+                    </div>
+                </div>
+                </div>
+        </div>
+    </div>
+</section>
+
+<!-- Learn Section -->
+
+<section class="p-5" id="learn">
+    <div class="container">
+        <div class="row align-items-center justify-content-between"></div>
+    </div>
+</section>
+
+
+
 
 
 
