--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
   <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg bg-danger h-25 navbar-dark">
+<nav class="navbar navbar-expand-lg bg-danger  navbar-dark fixed-top">
     <div class="container">
         <a href="#" class="navbar-brand">Frontend Bootcamp</a>
     
@@ -20,13 +20,13 @@
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">what you'll learn</a>
+                    <a href="#learn" class="nav-link">what you'll learn</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">FAQ</a>
+                    <a href="#questions" class="nav-link">FAQ</a>
                 </li>
                 <li class="nav-item ">
-                    <a href="#" class="nav-link">instructors</a>
+                    <a href="#instructors" class="nav-link">instructors</a>
                 </li>
             </ul>
         </div>
@@ -37,9 +37,9 @@
 <!-- showcase -->
 
 <section class="bg-secondary text-light pt-5 text-center">
-    <div class="container">
+    <div class="container align-content-center">
         <div class="d-md-flex p-3">
-             <div class="">
+             <div class="w-50 m-auto">
                 <h1>Become a <span class="text-info">WEB Developer</span> </h1>
                 <p class="lead">We focus on teaching our students the fundamentals
                     of the latest and greatest technologies to prepare them
@@ -47,8 +47,10 @@
                 </p>
                 <button type="button" class="btn btn-lg btn-primary">Enroll Now</button>
              </div>
-                 <video class="img-fluid d-none d-sm-block mb-5 mx-5 my-5 " src="./assets/Things to know.mp4" 
-                 alt="video about things to know" ></video>
+             <div class="col-sm mt-5">
+                 <img class="img-fluid rounded-circle d-none d-sm-block " src="./assets/ABELOV INTERNATIONAL LTD.jpg" 
+                 alt="video about things to know" ></>
+                </div>
         </div>
     </div>
 </section>
@@ -57,8 +59,8 @@
 
     <section class="bg-primary text-light p-5 ">
         <div class="container d-md-flex">
-            <div class="d-md-flex justify-content-between align-items-center">
-                <h3 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h3>
+            <div class="d-md-flex w-50">
+                <h3 class="mb-3 mb-md-0 w-100-sm ">Sign Up For Our Newsletter</h3>
             </div>
             <div class="input-group mb-3 news-input">
                 <input type="text" class="form-control" 
@@ -103,7 +105,7 @@
                             quibusdam itaque quis exercitationem repellat natus 
                             fugiat magnam provident assumenda cum totam, quasi,
                              ipsum repudiandae aliquam nemo.</p>
-                             <a class="btn btn-primary table-hover">Read More!</a>
+                             <a class="btn btn-dark border">Read More!</a>
                     </div>
                 </div>
             </div>
@@ -132,15 +134,109 @@
 
 <section class="p-5" id="learn">
     <div class="container">
-        <div class="row align-items-center justify-content-between"></div>
+        <div class="row align-items-center justify-content-between">
+            <div class="col-md">
+                <img src="./assets/vlcsnap-2024-11-20-06h33m05s712.png" alt="" class="img-fluid">
+            </div>
+            <div class="col-md p-5">
+                <h2>Learn The Fundamentals</h2>
+                <p class="lead">Lorem ipsum dolor sit amet consectetur 
+                    adipisicing elit. Placeat numquam vitae 
+                    voluptatem rerum, aspernatur dolorem dolore
+                     accusantium? Sunt, ab cumque officia
+                      accusantium, assumenda iure pariatur
+                       eveniet velit culpa tempora excepturi!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur
+                     adipisicing elit. Sapiente iusto id sunt.
+                      Aspernatur aperiam cupiditate saepe.
+                       Soluta officiis sequi ratione, fugit
+                        placeat eius porro, culpa, eligendi
+                         dolor debitis aspernatur doloribus!</p>
+                         <a href="#" class="btn btn-light ">Read More!</a>
+                         <i class="bi bi-chevron"></i>
+                    </div>
+        </div>
     </div>
 </section>
 
 
+  <section class="p-5 bg-dark text-white" id="learn">
+    <div class="container">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-md p-5">
+                <h2>Learn React</h2>
+                <p class="lead">
+                    Lorem ipsum dolor sit amet consectetur
+                     adipisicing elit. Deserunt repellendus,
+                     autem, mollitia voluptate deleniti 
+                     provident totam illum vero, beatae
+                     molestiae nam error eveniet veniam
+                     sequi voluptatem. Sed at rerum voluptatem?
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Vitae, iste esse pariatur veniam delectus
+                    voluptate commodi possimus sapiente! Neque odio
+                    veniam modi deserunt sint voluptatum aspernatur
+                    inventore, minima eveniet praesentium?</p>
+                    <a href="" class="btn btn-light">Read More</a>
+            </div>
+            <div class="col-md">
+                <img src="./assets/vlcsnap-2024-11-20-06h33m05s712.png" alt="" class="img-fluid">
+            </div>
+        </div>
+    </div>
+  </section>
 
+<!-- Questions Accordion -->
 
-
-
+<section class="p-5" id="questions">
+    <div class="container">
+        <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+        <div class="accordion accordion-flush" id="questions">
+            <!-- items -->
+             <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button"
+                    data-bs-toggle="collapse" 
+                    data-bs-target="#question1">Accordion Item</button>
+                </h2>
+                <div class=" collapse" id="question1">
+                    <div class="accordion-body">
+                        Lorem ipsum dolor sit amet consectetur,
+                         adipisicing elit. Provident cupiditate magnam
+                         fugit sed deleniti unde officia, cum eveniet
+                         maxime a autem culpa possimus omnis consequuntur
+                        ratione saepe maiores reiciendis et?
+                    </div>
+                </div>
+                <button class="accordion-button collapsed"
+                data-bs-toggle="collapse" data-bs-target="#question2">
+                    Accordion Item
+                </button>
+                <div class="collapse" id="question2">
+                    <p class="accordion-body">Lorem ipsum dolor sit amet consectetur
+                         adipisicing elit. Architecto tempora
+                         officia repudiandae quae perferendis,
+                         laudantium, a atque, qui alias culpa
+                         nesciunt ratione dolorum itaque aut
+                         dignissimos? Ducimus asperiores
+                         reprehenderit eveniet.</p>
+                </div>
+                <button class="accordion-button collapsed"
+                data-bs-target="#question3"
+                data-bs-toggle="collapse">
+            Accordion Item</button>
+            <div class="accordion-body collapse" id="question3">
+                Lorem ipsum dolor sit, amet consectetur
+                adipisicing elit. Temporibus tenetur iure
+                minima ipsum aspernatur consequatur,
+                recusandae ut? Nemo aliquid, accusamus, non
+                in hic fugit iusto quos illum modi maxime rem.
+            </div>
+             </div>
+        </div>
+    </div>
+</section>
 
 
 
