finished instructor section

--- a/index.htm
+++ b/index.htm
@@ -233,14 +233,97 @@
                 recusandae ut? Nemo aliquid, accusamus, non
                 in hic fugit iusto quos illum modi maxime rem.
             </div>
+            <button class="accordion-button collapsed"
+                data-bs-target="#question4"
+                data-bs-toggle="collapse">
+            Accordion Item</button>
+            <div class="accordion-body collapse" id="question4">
+                Lorem ipsum dolor sit, amet consectetur
+                adipisicing elit. Temporibus tenetur iure
+                minima ipsum aspernatur consequatur,
+                recusandae ut? Nemo aliquid, accusamus, non
+                in hic fugit iusto quos illum modi maxime rem.
+            </div>
              </div>
         </div>
     </div>
 </section>
 
+<!-- Instructors -->
 
+<section class="mt-2 p-5 bg-primary" id="instructors">
+<div class="container">
+    <h2 class="text-center text-white">Our Instructors</h2>
+    <p class="lead text-center text-white mb-5">Our Instructors all have 5+ years working as
+        a web developer in the industry
+    </p>
+    <div class="row g-4">
+        <div class="col-md-6 col-lg-3 bg-light">
+            <div class="card-body text-center">
+                <img class="rounded-circle img-fluid mb-3" src="./assets/ABELOV INTERNATIONAL LTD.jpg" alt="" class="img-fluid">
+                <h3 class="card-title mb-3">John Doe</h3>
+                <p class="card-text">Lorem ipsum dolor sit amet 
+                    consectetur, adipisicing elit. Officiis
+                    consequatur ipsam eum mollitia voluptatibus
+                    ea nihil iusto sapiente deserunt a. Nam vel
+                    natus modi neque assumenda consectetur 
+                    illum enim atque?</p>
+                    <a class="btn " href="#">
+                        <i class="bi bi-twitter text-dark mx-1"></i>
+                    </a>
+                    <a class="btn " href="#">
+                        <i class="bi bi-facebook text-dark mx-1"></i>
+                    </a>
+                    <a class="btn " href="#">
+                        <i class="bi bi-linkedIn text-dark mx-1"></i>
+                    </a>
+                    <a class="btn " href="#">
+                        <i class="bi bi-instagram text-dark mx-1"></i>
+                    </a>
+            </div>
+        </div>
+        <div class="col-md-6 com-lg-3 bg-light">
+            <div class="card-body text-center">
+                <img src="./assets/ABELOV INTERNATIONAL LTD.jpg" alt="" class="img-fluid rounded-circle mb-3">
+                <h3 class="card-title mb-3">Jane Doe</h3>
+                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut expedita odit corrupti aliquam labore. Tempora aperiam eveniet dolor quasi, fugiat minima quae reprehenderit sint at, itaque repellendus eius rem eum!</p>
+                <a class="btn " href="#">
+                    <i class="bi bi-twitter text-dark mx-1"></i>
+                </a>
+                <a class="btn " href="#">
+                    <i class="bi bi-facebook text-dark mx-1"></i>
+                </a>
+                <a class="btn " href="#">
+                    <i class="bi bi-linkedIn text-dark mx-1"></i>
+                </a>
+                <a class="btn " href="#">
+                    <i class="bi bi-instagram text-dark mx-1"></i>
+                </a>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-3 mb-3 bg-light">
+            <div class="card-body text-center">
+                <img src="./assets/ABELOV INTERNATIONAL LTD.jpg" alt="" class="img-fluid rounded-circle mb-3">
+                <h3 class="card-title">Bob Doe</h3>
+                <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa laboriosam tempore nam eum nisi nobis veniam fugit, suscipit quisquam recusandae pariatur dolorum provident aspernatur beatae, ipsum perferendis expedita id ab?</div>
+                <a class="btn " href="#">
+                    <i class="bi bi-twitter text-dark mx-1"></i>
+                </a>
+                <a class="btn " href="#">
+                    <i class="bi bi-facebook text-dark mx-1"></i>
+                </a>
+                <a class="btn " href="#">
+                    <i class="bi bi-linkedIn text-dark mx-1"></i>
+                </a>
+                <a class="btn " href="#">
+                    <i class="bi bi-instagram text-dark mx-1"></i>
+                </a>
+            </div>
+        </div>
 
-
+    </div>
+</div>
+</section>
 
 
 
